# Bridge-Agent

./: README.md  pyproject.toml
src/bridge_agent/: __init__.py  __main__.py  config.py  executor.py  main.py  openai_client.py
src/bridge_agent/models/: config.py  context.py  executeResponse.py  workflow.py
src/bridge_agent/nodes/: ConditionalNode.py  EndNode.py  GenericNode.py  StartNode.py
