[project]
name = "bridge-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TerminalMan", email = "84923604+SecretiveShell@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
bridge-agent = "bridge_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
