[project]
name = "bridge-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "TerminalMan", email = "84923604+SecretiveShell@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.6",
    "openai>=1.59.7",
    "pydantic>=2.10.5",
    "uvicorn>=0.34.0",
]

[project.scripts]
bridge-agent = "bridge_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bridge-agent",
]

[tool.uv.sources]
bridge-agent = { workspace = true }
